--- a/style.css
+++ b/style.css
@@ -176,6 +176,10 @@ a.button_blue{
         padding-top: 1.25rem;
     }
 }
+.header__bottom{
+    position: relative;
+    z-index: 2;
+}
 
 @media (min-width: 48.0625em) {
     .header__row{
@@ -362,6 +366,12 @@ a.button_blue{
         line-height: 1em;
         font-weight: 400;
         font-family: "Roboto";
+
+        transition: color 0.3s linear;
+    }
+    .menu__item > a:hover, .menu__item > button:hover,
+    .menu__item > a:focus, .menu__item > button:focus{
+        color: #999;
     }
     .menu__item:not(:last-child){
         margin-bottom: 0.625rem;
@@ -377,6 +387,7 @@ a.button_blue{
 @media (min-width: 48.0625em) {
     .select_item-menu{
         position: relative;
+        z-index: 10000;
     }
 }
 .select_item-menu__opener{
@@ -391,7 +402,7 @@ a.button_blue{
 
 @media (min-width: 48.0625em) {
     .select_item-menu__container{
-        position: absolute; z-index: 2; right: 0; bottom: 0; transform: translateY(100%);
+        position: absolute; z-index: 10000; right: 0; bottom: 0; transform: translateY(100%);
     }
 }
 .select_item-menu__container{
@@ -517,7 +528,14 @@ a.button_blue{
         background-color: #fff;
         width: 100%; height: 0.1875rem;
 
-        transition: transform 0.3s linear;
+        transition: transform 0.3s linear,
+        background-color 0.3s linear;
+    }
+    .header__closer:hover::after,
+    .header__closer:hover::before,
+    .header__closer:focus::after,
+    .header__closer:focus::before{
+        background-color: #999;
     }
     .header__closer::after{
         transform: translateX(-50%) translateY(-50%) rotate(45deg) scale(0);
